<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/create_contact"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/TxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="20dp" />

        <EditText
            android:id="@+id/TxtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:padding="20dp" />

        <EditText
            android:id="@+id/TxtCellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cellphone"
            android:inputType="number"
            android:padding="20dp" />

        <EditText
            android:id="@+id/TxtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number"
            android:padding="20dp" />

        <Button
            android:id="@+id/BtnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/custom_btncreate"
            android:padding="20dp"
            android:text="@string/save"
            android:textColor="@android:color/background_light" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>