<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:padding="20dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimary"
            android:typeface="serif"
            app:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="100dp"
            android:text="@string/create_contact_title"
            android:textAppearance="@android:style/TextAppearance.Holo"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-black" />

        <Button
            android:id="@+id/BtnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/custom_btncreate"
            android:text="@string/create_contact"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/BtnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/custom_btncreate"
            android:text="@string/contact_list"
            android:textColor="#ffff" />
        <!--
        <ListView
        android:id="@+id/Options"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->
    </LinearLayout>

</android.support.constraint.ConstraintLayout>